--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,9 @@ body {
 .link:focus {
   color: #404bbf;
 }
+.list {
+  list-style: none;
+}
 /* Header styles */
 .logo-web {
   font-family: "Raleway";
