--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@
 }
 body {
   font-size: 16px;
-  font-family: "Roboto", sans-serif
+  font-family: "Roboto"
+  font-family: sans-serif
   font-weight: 400;
   font-style: normal;
   line-height: 24px;
