--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,8 @@
   --color-dairy: #fcfcfc;
 }
 body {
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-family: "Roboto"
-  font-family: sans-serif
   font-weight: 400;
   font-style: normal;
   line-height: 24px;
