--- a/css/style.css
+++ b/css/style.css
@@ -74,12 +74,13 @@ body {
   list-style: none;
 }
 /* Header styles */
-.logo-web {
-  font-family: "Raleway";
+.header-logo {
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.17;
   color: #4d5ae5;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 .logo-studio {
