--- a/css/style.css
+++ b/css/style.css
@@ -83,20 +83,21 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
-.logo-studio {
-  font-family: "Raleway";
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 21px;
+.logo-span {
   color: #2e2f42;
   text-transform: uppercase;
 }
+.header-logo-link {
+  text-decoration: none;
+}
+
 .header-nav-item {
   font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   color: #2e2f42;
+  letter-spacing: 0.02em;
 }
 
 .header-nav-link {
