--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: #2e2f42;
+  letter-spacing: 0.02em;
 }
 
 .header-contact-link {
@@ -114,8 +115,11 @@ body {
   line-height: 24px;
   color: #434455;
   font-style: normal;
+  letter-spacing: 0.02em;
 }
-
+.header-address {
+  font-style: normal;
+}
 /* Hero styles */
 
 .hero {
