--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,8 @@ body {
   text-decoration: none;
   text-transform: none;
   color: #2e2f42;
+  line-height: 1.11;
+  text-align: center;
 }
 
 .link {
