--- a/css/style.css
+++ b/css/style.css
@@ -164,13 +164,21 @@ body {
   background-color: #2e2f42;
 }
 
-.logo-studio-footer {
-  font-family: "Raleway";
+.footer-logo {
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.17;
+  color: #4d5ae5;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.footer-logo-span {
   color: #f4f4fd;
   text-transform: uppercase;
+}
+.footer-logo-link {
+  text-decoration: none;
 }
 
 .foototer-description {
