--- a/css/style.css
+++ b/css/style.css
@@ -184,3 +184,24 @@ body {
 .foototer-description {
   color: #f4f4fd;
 }
+
+/* Portfolio */
+.filters-btn {
+  background: #f4f4fd;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #4d5ae5;
+  cursor: pointer;
+  letter-spacing: 0.04em;
+}
+.filters-btn:hover {
+  background-color: #404bbf;
+  color: #ffffff;
+}
+.filters-btn:focus {
+  background-color: #404bbf;
+  color: #ffffff;
+}
