--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,9 @@ body {
   background-color: #404bbf;
   color: #ffffff;
 }
+.work-list-filters {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
