--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ body {
   background-color: #404bbf;
   color: #ffffff;
 }
-.work-list-filters {
+.work-item-filters {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
